--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 		<h1 class="masthead">Time of Day</h1>
 	</header>
     <main>
-	 <header><h3>A JavaScript Project by YOUR NAME HERE</h3></header>
+	 <header><h3>A JavaScript Project by Marcella Touch</h3></header>
 	 <h3 id="my-greeting">Good Morning</h3>
-	    <p>Explain what your page does and how it works here!</p>
+		<p>This project uses the time to set the background, greeting, and picture corresponding to the current time of day. A if-else statement is used to check what time of day suits the given hour and make relevant changes to the webpage. </p>
 	  <img id= "my-pic" src="http://dummyimage.com/300x400" alt="Time of Day Image" class="flexible">
      <footer>
       <p><small>&copy; 2022 by 
-          YOUR NAME HERE, All Rights Reserved ~ 
+          Marcella Touch, All Rights Reserved ~ 
           <a id="html-checker" href="#" target="_blank">Check HTML</a> ~ 
           <a id="css-checker" href="#" target="_blank">Check CSS</a></small>
      </p>
@@ -77,23 +77,29 @@
 	let myColor = "";
 	let myPic = "";
 
-	if(myHour >= 12 && myHour < 18){
+
+	if(myHour < 12 && myHour >=5){
+		myGreeting = "Good morning!";
+		myColor = "blue";
+		myPic = "morning.jpg";
+
+	}else if(myHour >= 12 && myHour < 18){
 		myGreeting = "Good afternoon!";
 		myColor = "green";
 		myPic = "afternoon.jpg";
 
-	}else if(myHour < 12 && myHour >=5){
-		myGreeting = "Good morning!";
-		myColor = "blue";
-		myPic = "morning.jpg";
 	}else if(myHour >= 18 && myHour < 23){
 		myGreeting = "Good evening!";
 		myColor = "purple";
 		myPic = "evening.jpg";
+
+	}else if(myHour >= 23 || (myHour < 5 && myHour >=1)){
+		myGreeting = "Good night!";
+		myColor = "black";
+		myPic = "night.jpg";
+
 	}else{
-		myGreeting = "Not afternoon!";
-		myColor = "red";
-		myPic = "morning.jpg";
+		myGreeting = "Not a valid time";
 	}
 
 	// pre-pend the images path
